--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,3 +1,7 @@
 .tight-table table td {
 white-space: normal !important;
 }
+
+.bullet-list {
+    margin-bottom: 20px; /* Adjust the value as needed */
+}
